# tydier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  df-cleaner.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
dfcleaner/docs/: example.ipynb
dfcleaner/tests/: test_dfcleaner.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dfcleaner/: __init__.py  catvars.py  dfcleaner.py  strings.py
src/dfcleaner/prova/: strings.py
src/tydier/: __init__.py  catvars.py  numvars.py  strings.py  utilities.py
tests/: demo.py  test_dfcleaner.py
