[tool.poetry]
name = "dfcleaner"
version = "0.1.0"
description = "Python package for cleaning and manipulating data."
authors = ["Antonio Buzzelli"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
